--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <title>Ember Contact Manager</title>
     <meta charset="utf-8" />
@@ -13,44 +14,52 @@
 
 <script type="text/x-handlebars" data-template-name="contacts">
     <div class="page-header">
-        <h1>My Contacts <span class="badge">{{ this.contactCount }}</span></h1>
+        <h1>{{#link-to "contacts"}}Ember Contact Manager{{/link-to}}</h1>
     </div>
-    <div class="contact-list">
-    <table class="table table-hover">
-        <thead>
-        <tr>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Phone</th>
-        </tr>
-        </thead>
+    <div class="row">
+    <div class="col-md-2 contact-list">
+        <p class="contact-title">Total Contacts <span class="badge">{{ App.Contact.FIXTURES.length }}</span></p>
+
+        <dl>
         {{#each contact in controller}}
-        <tr>
-            <td>{{#link-to "contact" contact}}{{ contact.fullName }}{{/link-to}}</td>
-            <td><span class="glyphicon glyphicon-envelope"> {{ contact.email }} </span></td>
-            <td><span class="glyphicon glyphicon-earphone"> {{ contact.phone }} </span></td>
-        </tr>
+        <dl class="well">
+            <dt>
+            {{#link-to "contact" contact}}{{ contact.fullName }}{{/link-to}}
+            </dt>
+            <dd>
+            <span class="glyphicon glyphicon-envelope"> {{ contact.email }} </span>
+                <br/>
+            <span class="glyphicon glyphicon-earphone"> {{ contact.phone }} </span>
+            </dd>
+        </dl>
         {{/each}}
-    </table>
+        </dl>
     </div>
-    <div>
+    <div class="col-md-4">
     {{outlet}}
+    </div>
     </div>
 </script>
 <script type="text/x-handlebars" data-template-name="contact">
+    {{#if isEditing}}
+    TODO
+    {{else}}
     <div class="well contact">
         <h3>{{ firstName }} {{ lastName }}</h3>
-        <hr/>
         <h4>Contact Details</h4>
         <span class="glyphicon glyphicon-envelope"> {{ email }} </span>
         <br/>
         <span class="glyphicon glyphicon-earphone"> {{ phone }} </span>
-        <hr/>
+        <br/>
+        <br/>
+        <button type="button" {{action 'editContact' this}}  class='btn btn-primary' >Edit</button>
+        <button {{action "deleteContact"}} class="btn btn-danger btn-mini">Delete</button>
     </div>
+    {{/if}}
 </script>
-<script type="text/x-handlebars" data-template-name="contact/index">
+<script type="text/x-handlebars" data-template-name="contacts/index">
     <!--This template is rendered when no item has been selected-->
-    <h2>Please select a contact</h2>
+    <h3>Select a contact to view/edit details.</h3>
 </script>
 
 <script src="js/lib/jquery-1.9.1.js"></script>
