--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="row">
         <div class="col-md-2 contact-list">
-            <p class="contact-title">Total Contacts <span class="badge">{{ controller.contactCount }}</span></p>
+            <p class="contact-title">Total Contacts <span class="badge">{{ controller.length }}</span></p>
             <dl>
             {{#each contact in controller}}
             <dl class="well">
