--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="css/site.css">
 </head>
 <body>
-<script type="text/x-handlebars" data-template-name="application" >
-    <p>{{ outlet }}</p>
-</script>
 <script type="text/x-handlebars" data-template-name="contacts">
     <div class="page-header">
         <h1>{{#link-to "contacts"}}Ember Contact Manager{{/link-to}}</h1>
@@ -43,9 +40,6 @@
 <script type="text/x-handlebars" data-template-name="contacts/index">
     <!--This template is rendered when no item has been selected-->
     <h3>Select a contact to view/edit details.</h3>
-</script>
-<script type="text/x-handlebars" data-template-name="contact/index">
-    {{outlet}}
 </script>
 
 <script type="text/x-handlebars" data-template-name="contact">
@@ -85,8 +79,8 @@
             {{input class="contact-input" type="text" value=phone}}
         </div>
         <div class="form-group">
-            <label>Birth Date</label>
-            {{input class="contact-input" type="text" value=birthDate }}
+            <label>Birth Date</label><br/>
+            {{input class="contact-input" type="text" value=birthDate}}
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-default">Save</button>
@@ -98,12 +92,12 @@
 </script>
 
 
-<script src="js/lib/jquery-1.9.1.js"></script>
-<script src="js/lib/moment.min.js"></script>
-<script src="js/lib/bootstrap.js"></script>
-<script src="js/lib/handlebars-1.0.0.js"></script>
-<script src="js/lib/ember-1.1.2.js"></script>
-<script src="js/lib/ember-data.js"></script>
+<script src="js/libs/jquery-1.9.1.js"></script>
+<script src="js/libs/moment.min.js"></script>
+<script src="js/libs/bootstrap.js"></script>
+<script src="js/libs/handlebars-1.0.0.js"></script>
+<script src="js/libs/ember-1.1.2.js"></script>
+<script src="js/libs/ember-data.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
