--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Ember Contact Manager</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="css/lib/bootstrap.css" media="screen">
-    <link rel="stylesheet" href="css/lib/bootstrap-theme.css" media="screen">
+    <link rel="stylesheet" href="css/libs/bootstrap.css" media="screen">
+    <link rel="stylesheet" href="css/libs/bootstrap-theme.css" media="screen">
+    <link rel="stylesheet" href="css/libs/datepicker.css" media="screen">
     <link rel="stylesheet" href="css/site.css">
 </head>
 <body>
@@ -50,7 +51,7 @@
         <br/>
         <span class="glyphicon glyphicon-earphone"> {{ phone }} </span>
         <br/>
-        <span class="glyphicon glyphicon-calendar"> {{ formattedDate }} </span>
+        <span class="glyphicon glyphicon-calendar"> {{ parseDate birthDate}} </span>
         <br/>
         <br/>
         <button {{action edit this}} class="btn btn-default ">Edit</button>
@@ -97,12 +98,19 @@
     </div>
 </script>
 
+<script type="text/x-handlebars" data-template-name="datepicker" >
+    <div class="input-append date datepicker" data-date-format="yyyy-mm-dd">
+        <input size="16" type="text" readonly><span class="add-on"><i class="icon-th"></i></span>
+    </div>
+</script>
+
 <script src="js/libs/jquery-1.9.1.js"></script>
 <script src="js/libs/moment.min.js"></script>
 <script src="js/libs/bootstrap.js"></script>
 <script src="js/libs/handlebars-1.0.0.js"></script>
 <script src="js/libs/ember-1.1.2.js"></script>
 <script src="js/libs/ember-data.js"></script>
+<script src="js/libs/bootstrap-datepicker.js"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
