Minor view updates

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
         <br/>
         <span class="glyphicon glyphicon-earphone"> {{ phone }} </span>
         <br/>
-        <span class="glyphicon glyphicon-calendar"> {{ parseDate birthDate}} </span>
-        <br/>
+        <h6><small>Born</small> {{ parseDate birthDate}}</h6>
         <br/>
         <button {{action edit this}} class="btn btn-default ">Edit</button>
         <button {{action delete this}} class="btn btn-danger ">Delete</button>
