--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
         <fieldset>
             <div class="form-group">
                 <label >First</label>
-                {{input class="contact-input" id="firstName" value=firstName}}
+                {{input class="contact-input" value=firstName}}
             </div>
             <div class="form-group">
                 <label >Last</label>
-                {{input class="contact-input" id="lastName" value=lastName}}
+                {{input class="contact-input" value=lastName}}
             </div>
             <div class="form-group">
                 <label >Email</label>
